tests/unit/evaluation/minizinc/general/test_array1d_bad_2.mer_fd.exp
test_array1d_bad_2.mzn:1: error: 
test_array1d_bad_2.mzn:1:   In variable declaration for a 
test_array1d_bad_2.mzn:1:   Arrays have different index sets ([0..3] vs 
test_array1d_bad_2.mzn:1:   [1..4]).
